# Plasmoid_Twitter_client

./: CMakeLists.txt  Doxyfile  README.md  build.sh
package/: metadata.desktop
package/contents/config/: config.qml  main.xml
package/contents/ui/: Conversation.qml  OpenMediaDialog.qml  TabMessages.qml  TabNotifications.qml  TabTweets.qml  main.qml
package/contents/ui/config/: ConfigGeneral.qml  ConfigNotifications.qml
plugin/: CMakeLists.txt  backend.cpp  backend.h  config.cpp  config.h  plasmoidplugin.cpp  plasmoidplugin.h  qmlBackendFactory.cpp  qmlBackendFactory.h  qmldir
plugin/Exceptions/: createFolderException.cpp  createFolderException.h  myFileException.cpp  myFileException.h  permFileException.cpp  permFileException.h
plugin/JsonCpp/: jsoncpp.cpp
plugin/Model/: conversation.cpp  conversation.h  conversationModel.cpp  conversationModel.h  conversationsModel.cpp  conversationsModel.h  hashtag.cpp  hashtag.h  listItem.h  listModel.cpp  listModel.h  media.cpp  media.h  mention.cpp  mention.h  message.cpp  message.h  model.cpp  model.h  notification.cpp  notification.h  notificationsModel.cpp  notificationsModel.h  status.cpp  status.h  statusesModel.cpp  statusesModel.h  subListedListItem.h  subListedListModel.cpp  subListedListModel.h  tag.cpp  tag.h  url.cpp  url.h  user.cpp  user.h  usersContainer.cpp  usersContainer.h
plugin/Model/ModelExceptions/: missingSignedUserException.cpp  missingSignedUserException.h
plugin/Twitter/: ImageDownloader.cpp  ImageDownloader.h  Twitter.cpp  Twitter.h  TwitterWorker.cpp  TwitterWorker.h  plasTwitCurl.h  twitterRequester.cpp  twitterRequester.h  twitterTimer.cpp  twitterTimer.h
plugin/Twitter/libtwitcurl/: libtwitcurl.so.1.0  twitcurl.h
